fix(categories): in frontend solve overflow issue with category

--- a/frontend/src/app/components/category/category.component.css
+++ b/frontend/src/app/components/category/category.component.css
@@ -12,4 +12,7 @@
 
 .media-container {
   display: flex;
+  width: 100%;
+  padding: 10px;
+  overflow-x: auto;
 }
